2004-03-21  Marcus Brinkmann  <marcus@gnu.org>

	* cap-server.h (hurd_cap_obj_rele): Require at least two
	references.  	

	* Initial release.